# shed-mobile

./: .gitignore  Makefile  PROGRESS.md  README.md  analysis_options.yaml  flutter_launcher_icons.yaml  mkdocs.yml  pubspec.yaml  pyproject.toml
.claude/commands/: release-android.md
.github/workflows/: ci.yml  release-android.yml
android/: .gitignore
android/app/: build.gradle.kts
android/fastlane/: Appfile  Fastfile
docs/: PLAN-m8-multished.md  PLAN-m8b-redesign.md  PLAN-ui-polish.md  PLAN.md  android-release.md  building-and-releasing.md  index.md
docs/architecture/: overview.md  transport-security.md
docs/development/: agents.md  testing.md
docs/features/: rc-sessions.md  sheds.md  terminal.md
docs/getting-started/: quick-start.md
env/: dev.json
integration_test/: shed_probe_test.dart  simple_test.dart  slices_test.dart
lib/: main.dart  providers.dart
lib/app/: app_section.dart  app_shell.dart  desktop_scaffold.dart  mobile_scaffold.dart
lib/bridge/: bridge_adapters.dart  mint_sink.dart
lib/control/: control_token_provider.dart  (+1 more)
linux/: CMakeLists.txt
rust/: Cargo.toml  rust-toolchain.toml
rust/.cargo/: config.toml.template
rust/src/: frb_generated.rs
rust/src/api/: bridge_rt.rs  client.rs  create_stream.rs  dto.rs  dto_rc.rs  error.rs  local_sse.rs  mint.rs  mod.rs  rc_runner.rs  shed.rs  watcher.rs
rust_builder/: pubspec.yaml
scripts/: check-16kb-alignment.sh  check-lock-rev.sh  generate_app_icons.py
test/: providers_fanout_test.dart  widget_test.dart
tool/: api_smoke.dart  e2e_list.dart  e2e_pty.dart  e2e_rc.dart
(+171 files in other folders)
